<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.productos.ProductosFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--    Codigo Caja 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/globos" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameP1" />

                    <TextView
                        android:id="@+id/tvDescriptionP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descriptionP1" />

                    <TextView
                        android:id="@+id/tvPriceP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceP1" />
                </LinearLayout>
            </LinearLayout>

            <!--    Codigo Caja 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/sombrero" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameP2" />

                    <TextView
                        android:id="@+id/tvDescriptionP2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descriptionP2" />

                    <TextView
                        android:id="@+id/tvPriceP2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceP2" />
                </LinearLayout>
            </LinearLayout>

            <!--    Codigo Caja 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/esfera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameP3" />

                    <TextView
                        android:id="@+id/tvDescriptionP3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descriptionP3" />

                    <TextView
                        android:id="@+id/tvPriceP3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceP3" />
                </LinearLayout>
            </LinearLayout>

            <!--    Codigo Caja 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP4"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/silbato" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameP4" />

                    <TextView
                        android:id="@+id/tvDescriptionP4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descriptionP4" />

                    <TextView
                        android:id="@+id/tvPriceP4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceP4" />
                </LinearLayout>
            </LinearLayout>

            <!--    Codigo Caja 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP5"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/acordeon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameP5" />

                    <TextView
                        android:id="@+id/tvDescriptionP5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/descriptionP5" />

                    <TextView
                        android:id="@+id/tvPriceP5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceP5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>