<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.servicios.ServiciosFragment">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--    Codigo Caja 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgS1"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:src="@drawable/dj" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameS1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameS1" />

                <TextView
                    android:id="@+id/tvDescriptionS1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/descriptionS1" />

                <TextView
                    android:id="@+id/tvPriceS1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceS1" />
            </LinearLayout>
        </LinearLayout>

        <!--    Codigo Caja 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgS2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:src="@drawable/banda" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameS2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameS2" />

                <TextView
                    android:id="@+id/tvDescriptionS2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/descriptionS2" />

                <TextView
                    android:id="@+id/tvPriceS2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceS2" />
            </LinearLayout>
        </LinearLayout>

        <!--    Codigo Caja 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgS3"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:src="@drawable/catering" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameS3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameS3" />

                <TextView
                    android:id="@+id/tvDescriptionS3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/descriptionS3" />

                <TextView
                    android:id="@+id/tvPriceS3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceS3" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

        </LinearLayout>